tests/baselines/reference/computedPropertyNames18_ES6.errors.txt
computedPropertyNames18_ES6.ts(3,10): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


==== computedPropertyNames18_ES6.ts (1 errors) ====
    function foo() {
        var obj = {
            [this.bar]: 0
             ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
        }
    }